# Mathematics-for-engineers

./: README.md
Three-js/: README.md  Three-js.rar
Three-js/AngThr/: README.md  angular.json  package-lock.json  package.json
Three-js/AngThreeTr-main/: angular.json  karma.conf.js  models.json  package-lock.json  package.json
Unigine/: README.md
Метод конечных элементов/: README.md
Метод конечных элементов/Конечно-элементный анализ/: LR033.sln  README.md
Метод конечных элементов/Численные методы/FEM для 2D пространства/Triangulation-master/: .gitignore  CMakeLists.txt  README.md
Метод конечных элементов/Численные методы/FEM для 2D пространства/Triangulation-master/examples/: CMakeLists.txt  example.cpp
Метод конечных элементов/Численные методы/FEM для 2D пространства/Triangulation-master/triangulation/: CMakeLists.txt  triangulation.cpp  triangulation.h
Отчётность/: Алимов Численное интегрирование.docx  Панаскин Гаусс-Зейдель.docx  Пересторонин изолинии.docx  Пересторонин интегралы.docx  Сергеев Метод Чебышева.docx  Сергичева Рунге-Кутта.docx
Участники/А. В. Гайнулин/: README.md
Участники/А. В. Гайнулин -/: README.md
Участники/А. Д. Конинина/: README.md
Участники/А. Д. Панаскин/: README.md
Участники/А. М. Пересторонин/: README.md
Участники/А. С. Сёмин/: README.md
Участники/А. Ю. Фомина/: README.md
Участники/В. Илиев/: README.md
Участники/В. Н. Сергичева/: README.md
Участники/Д. А. Куклин/: README.md
Участники/Е. С Гаврилова/: README.md
Участники/И. Д. Быковский/: README.md
Участники/И. О. Евдокимов/: README.md
(+221 files in other folders)
